# discord-rumi

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: adding-commands.md  adding-events.md  architecture.md
src/: config.rs  data.rs  error.rs  main.rs  registration.rs
src/commands/: mod.rs
src/commands/anilist/: animelist.rs  mod.rs  user.rs  utils.rs
src/commands/anime/: mod.rs
src/commands/dev/: echo.rs
src/commands/react/: mod.rs
src/commands/utility/: define.rs  mod.rs  ping.rs
src/events/: message_command.rs  mod.rs  ready.rs
src/updater/: check.rs  install.rs  mod.rs  target.rs
